# browser-tools-context-server

./: Cargo.toml  README.md  extension.toml
configuration/: default_settings.jsonc  installation_instructions.md
src/: lib.rs
