[package]
name = "browser_tools_model_context"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
schemars = "0.8"
zed_extension_api = "0.7.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
